--- a/src/Components/HomePage/NameComponent/styles.css
+++ b/src/Components/HomePage/NameComponent/styles.css
@@ -17,10 +17,10 @@ body {
     3px -3px 0 #222,
     -3px 3px 0 #222,
     3px 3px 0 #222,
-    4px 4px 0 #fff,
-    5px 5px 0 #fff,
-    6px 6px 0 #fff,
-    7px 7px 0 #fff;
+    4px 4px 0 #C3073F,
+    5px 5px 0 #C3073F,
+    6px 6px 0 #C3073F,
+    7px 7px 0 #C3073F;
   line-height: 0.8em;
   letter-spacing: 0.1em;
   transform: scaleY(0.7);
@@ -61,11 +61,11 @@ body {
   font-size: 100px;
 }
 
-.hidden {
+.hid {
   opacity: 0;
-  transition: all 1s;
 }
 
-.show {
+.sh {
   opacity: 1;
+  transition: opacity 2s;
 }
