--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
-html {
-    background-color: black;
+html,body {
+    background: linear-gradient(to top, #5e0720, rgb(19, 17, 36) 18%, rgb(8, 7, 7), rgb(30, 27, 27));
+
+    
+    
+
+
 }
+
