--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html,body {
-    background: linear-gradient(to top, #5e0720, rgb(19, 17, 36) 18%, rgb(8, 7, 7), rgb(30, 27, 27));
+    background: linear-gradient(to top, #3f0515, rgb(19, 17, 36) 18%, rgb(8, 7, 7), rgb(30, 27, 27));
 
     
     
