--- a/src/Components/HomePage/NameComponent/ScrollDown/styles.css
+++ b/src/Components/HomePage/NameComponent/ScrollDown/styles.css
@@ -18,7 +18,7 @@
 }
 .main {
   color:#ffb637;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: "Comic Sans MS", "Comic Sans";
   transform: rotate(36deg);
   font-size:15px;
   letter-spacing:10px;
